--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
+<!DOCTYPE html>
 <html>
-    <head>
-
-    </head>
     <body>
-        <p>test</p>
+        <h1>Hello World</h1>
     </body>
 </html>
